# hypermedia_boilerplate

./: .env  .gitignore  Cargo.toml  README.md  build.rs  package-lock.json
src/: main.rs
templates/: index.html
